tests/cases/compiler-development/artifact/errors/diagnostic-match-struct-pattern-tuple-struct.diagnostic
diagnostic error code=T0001 family=type message="tuple structs must use positional match patterns" sources=1 labels=1 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/match/errors/match-struct-pattern-tuple-struct.ari" display="tests/cases/match/errors/match-struct-pattern-tuple-struct.ari" bytes=121
  Label index=0 role=primary source_id=0 source="tests/cases/match/errors/match-struct-pattern-tuple-struct.ari" line=6 column=5 end_line=6 end_column=8 byte_start=97 byte_end=100 message=""
  Snippet label=0 text="  --> tests/cases/match/errors/match-struct-pattern-tuple-struct.ari:6:5\n   |\n 6 |     Rgb { .. } => 1,\n   |     ^^^"
  Note index=0 location=none message="tuple structs have unnamed fields, so named-field patterns cannot identify their payload slots"
  Help index=0 location=none message="use positional syntax such as `Name(a, b)` instead of `Name { ... }`"
